xidlc/tests/snapshots/codegen_snapshot__ts-http__http_attribute.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_attribute.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_attribute";

import type * as ifaceTypes from "./http_attribute.iface";
import * as ifaceSchemas from "./http_attribute.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class HttpAttributeServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async get_attribute_version(): Promise<string> {
                let xidlPath = "/attribute/version";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
            async get_attribute_name(): Promise<string> {
                let xidlPath = "/attribute/name";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
            async set_attribute_name(name: string): Promise<void> {
                const parsed = ifaceSchemas.HttpAttributeServiceSetAttributeNameRequestSchema.parse({ "name": name });
                let xidlPath = "/attribute/name";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = parsed["name"];
        headers.set("Content-Type", "text/plain");
        
        headers.set("Accept", "");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "text/plain", this.codecs, ifaceSchemas.HttpAttributeServiceSetAttributeNameRequestSchema) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return;
        
    }
    
    
}
===============
http_attribute.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



export {};
===============
http_attribute.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpAttributeServiceSetAttributeNameRequest {
        name: string;
        }

export {};
===============
http_attribute.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpAttributeServiceSetAttributeNameRequestSchema = z.object({
        name: z.coerce.string(),
    });
export type HttpAttributeServiceSetAttributeNameRequest = z.infer<typeof HttpAttributeServiceSetAttributeNameRequestSchema>;
===============
http_attribute.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_attribute";

import type * as ifaceTypes from "./http_attribute.iface";
import * as ifaceSchemas from "./http_attribute.iface.zod";
import { z } from "zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpAttributeService {
    
        get_attribute_version(): Awaitable<string>;
    
        get_attribute_name(): Awaitable<string>;
    
        set_attribute_name(name: string): Awaitable<void>;
    
}

export const HttpAttributeServiceOperations = {
    
        get_attribute_version: defineOperation<HttpAttributeService, "get_attribute_version">({
            handler: "get_attribute_version",
            method: "GET",
            path: "/attribute/version",
            paths: ["/attribute/version"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        get_attribute_name: defineOperation<HttpAttributeService, "get_attribute_name">({
            handler: "get_attribute_name",
            method: "GET",
            path: "/attribute/name",
            paths: ["/attribute/name"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        set_attribute_name: defineOperation<HttpAttributeService, "set_attribute_name">({
            handler: "set_attribute_name",
            method: "POST",
            path: "/attribute/name",
            paths: ["/attribute/name"],
            request: {
                kind: "object",
                args: ["name"],
                schema: ifaceSchemas.HttpAttributeServiceSetAttributeNameRequestSchema,
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "text/plain",
                    fields: [{ wireName: "name", key: "name" }],
                    singleKey: "name",
                    schema: ifaceSchemas.HttpAttributeServiceSetAttributeNameRequestSchema,
                
            },
        },
        response: {
            contentType: "",
            bodyMode: "none",
            bodyFields: [],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_attribute.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";
