xidlc/tests/snapshots/codegen_snapshot__ts-http__http_body_shape.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_body_shape.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_body_shape";

import type * as ifaceTypes from "./http_body_shape.iface";
import * as ifaceSchemas from "./http_body_shape.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class BodyShapeClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async document(): Promise<ifaceTypes.BodyShapeDocumentResponse> {
                let xidlPath = "/document";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "application/json");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        const responseBody = await decodeOptionalResponseBody(resp, "application/json", this.codecs);
        const responsePayload = buildResponsePayload(responseBody, resp, "return", [{ wireName: "return", key: "return" }], [{ name: "ETag", key: "etag", optional: false, isMulti: false, decode: value => value }], []);
        return ifaceSchemas.BodyShapeDocumentResponseSchema.parse(deserialize(responsePayload, ifaceSchemas.BodyShapeDocumentResponseSchema)) as ifaceTypes.BodyShapeDocumentResponse;
        
    }
    
            async scalar(): Promise<ifaceTypes.BodyShapeScalarResponse> {
                let xidlPath = "/scalar";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        const responseBody = await decodeOptionalResponseBody(resp, "text/plain", this.codecs);
        const responsePayload = buildResponsePayload(responseBody, resp, "return", [{ wireName: "return", key: "return" }], [{ name: "ETag", key: "etag", optional: false, isMulti: false, decode: value => value }, { name: "X-Count", key: "count", optional: false, isMulti: false }], [{ name: "cached", key: "cached", optional: false, isMulti: false }]);
        return ifaceSchemas.BodyShapeScalarResponseSchema.parse(deserialize(responsePayload, ifaceSchemas.BodyShapeScalarResponseSchema)) as ifaceTypes.BodyShapeScalarResponse;
        
    }
    
            async rename(document: types.Document): Promise<ifaceTypes.BodyShapeRenameResponse> {
                const parsed = ifaceSchemas.BodyShapeRenameRequestSchema.parse({ "document": document });
                let xidlPath = "/rename";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = parsed["document"];
        headers.set("Content-Type", "application/json");
        
        headers.set("Accept", "application/json");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "application/json", this.codecs, ifaceSchemas.models.DocumentSchema) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        const responseBody = await decodeOptionalResponseBody(resp, "application/json", this.codecs);
        const responsePayload = buildResponsePayload(responseBody, resp, "return", [{ wireName: "return", key: "return" }], [{ name: "ETag", key: "etag", optional: false, isMulti: false, decode: value => value }], []);
        return ifaceSchemas.BodyShapeRenameResponseSchema.parse(deserialize(responsePayload, ifaceSchemas.BodyShapeRenameResponseSchema)) as ifaceTypes.BodyShapeRenameResponse;
        
    }
    
            async output(): Promise<ifaceTypes.BodyShapeOutputResponse> {
                let xidlPath = "/output";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "application/json");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        const responseBody = await decodeOptionalResponseBody(resp, "application/json", this.codecs);
        const responsePayload = buildResponsePayload(responseBody, resp, "return", [{ wireName: "document", key: "document" }], [{ name: "ETag", key: "etag", optional: false, isMulti: false, decode: value => value }], []);
        return ifaceSchemas.BodyShapeOutputResponseSchema.parse(deserialize(responsePayload, ifaceSchemas.BodyShapeOutputResponseSchema)) as ifaceTypes.BodyShapeOutputResponse;
        
    }
    
            async upload(media_type: string | undefined, payload: Uint8Array): Promise<types.UploadResult> {
                const parsed = ifaceSchemas.BodyShapeUploadRequestSchema.parse({ "media_type": media_type, "payload": payload });
                let xidlPath = "/upload";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                appendHeader(headers, "Content-Type", media_type, true, false);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = parsed["payload"];
        if (!headers.has("Content-Type")) {
            headers.set("Content-Type", "application/octet-stream");
        }
        
        headers.set("Accept", "application/json");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "application/octet-stream", this.codecs, undefined) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<types.UploadResult>(resp, "application/json", this.codecs);
    }
    
    
}
===============
http_body_shape.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface Document {
        
            title: string;
            }

    

export interface UploadResult {
        
            media_type: string;
                size: number;
            }

export {};
===============
http_body_shape.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    import type * as types from "./http_body_shape";


    

export interface BodyShapeDocumentResponse {
        return: types.Document;
            etag: string;
        }

    

export interface BodyShapeScalarResponse {
        return: string;
            etag: string;
            count: number;
            cached: boolean;
        }

    

export interface BodyShapeRenameRequest {
        document: types.Document;
        }

    

export interface BodyShapeRenameResponse {
        return: types.Document;
            etag: string;
        }

    

export interface BodyShapeOutputResponse {
        document: types.Document;
            etag: string;
        }

    

export interface BodyShapeUploadRequest {
        media_type?: string;
            payload: Uint8Array;
        }

export {};
===============
http_body_shape.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    import * as models from "./http_body_shape.zod";
    export { models };


    
export const BodyShapeDocumentResponseSchema = z.object({
        return: models.DocumentSchema,
        etag: z.coerce.string(),
    });
export type BodyShapeDocumentResponse = z.infer<typeof BodyShapeDocumentResponseSchema>;

    
export const BodyShapeScalarResponseSchema = z.object({
        return: z.coerce.string(),
        etag: z.coerce.string(),
        count: z.coerce.number().int().nonnegative(),
        cached: z.coerce.boolean(),
    });
export type BodyShapeScalarResponse = z.infer<typeof BodyShapeScalarResponseSchema>;

    
export const BodyShapeRenameRequestSchema = z.object({
        document: models.DocumentSchema,
    });
export type BodyShapeRenameRequest = z.infer<typeof BodyShapeRenameRequestSchema>;

    
export const BodyShapeRenameResponseSchema = z.object({
        return: models.DocumentSchema,
        etag: z.coerce.string(),
    });
export type BodyShapeRenameResponse = z.infer<typeof BodyShapeRenameResponseSchema>;

    
export const BodyShapeOutputResponseSchema = z.object({
        document: models.DocumentSchema,
        etag: z.coerce.string(),
    });
export type BodyShapeOutputResponse = z.infer<typeof BodyShapeOutputResponseSchema>;

    
export const BodyShapeUploadRequestSchema = z.object({
        media_type: z.coerce.string().optional(),
        payload: z.instanceof(Uint8Array),
    });
export type BodyShapeUploadRequest = z.infer<typeof BodyShapeUploadRequestSchema>;
===============
http_body_shape.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_body_shape";

import type * as ifaceTypes from "./http_body_shape.iface";
import * as ifaceSchemas from "./http_body_shape.iface.zod";
import { z } from "zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface BodyShape {
    
        document(): Awaitable<ifaceTypes.BodyShapeDocumentResponse>;
    
        scalar(): Awaitable<ifaceTypes.BodyShapeScalarResponse>;
    
        rename(document: types.Document): Awaitable<ifaceTypes.BodyShapeRenameResponse>;
    
        output(): Awaitable<ifaceTypes.BodyShapeOutputResponse>;
    
        upload(media_type: string | undefined, payload: Uint8Array): Awaitable<types.UploadResult>;
    
}

export const BodyShapeOperations = {
    
        document: defineOperation<BodyShape, "document">({
            handler: "document",
            method: "GET",
            path: "/document",
            paths: ["/document"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [{ wireName: "ETag", key: "etag", multi: false }],
            cookies: [],
            schema: ifaceSchemas.BodyShapeDocumentResponseSchema,
            stream: false,
            
        },
        security: [],
        
    }),
    
        scalar: defineOperation<BodyShape, "scalar">({
            handler: "scalar",
            method: "GET",
            path: "/scalar",
            paths: ["/scalar"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [{ wireName: "ETag", key: "etag", multi: false }, { wireName: "X-Count", key: "count", multi: false }],
            cookies: [{ wireName: "cached", key: "cached", multi: false }],
            schema: ifaceSchemas.BodyShapeScalarResponseSchema,
            stream: false,
            
        },
        security: [],
        
    }),
    
        rename: defineOperation<BodyShape, "rename">({
            handler: "rename",
            method: "POST",
            path: "/rename",
            paths: ["/rename"],
            request: {
                kind: "object",
                args: ["document"],
                schema: ifaceSchemas.BodyShapeRenameRequestSchema,
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "application/json",
                    fields: [{ wireName: "document", key: "document" }],
                    singleKey: "document",
                    schema: ifaceSchemas.models.DocumentSchema,
                
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [{ wireName: "ETag", key: "etag", multi: false }],
            cookies: [],
            schema: ifaceSchemas.BodyShapeRenameResponseSchema,
            stream: false,
            
        },
        security: [],
        
    }),
    
        output: defineOperation<BodyShape, "output">({
            handler: "output",
            method: "GET",
            path: "/output",
            paths: ["/output"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "return",
            bodyFields: [{ wireName: "document", key: "document" }],
            headers: [{ wireName: "ETag", key: "etag", multi: false }],
            cookies: [],
            schema: ifaceSchemas.BodyShapeOutputResponseSchema,
            stream: false,
            
        },
        security: [],
        
    }),
    
        upload: defineOperation<BodyShape, "upload">({
            handler: "upload",
            method: "POST",
            path: "/upload",
            paths: ["/upload"],
            request: {
                kind: "object",
                args: ["media_type", "payload"],
                schema: ifaceSchemas.BodyShapeUploadRequestSchema,
                path: [],
                query: [],
                headers: [{ wireName: "Content-Type", key: "media_type", multi: false }],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "application/octet-stream",
                    fields: [{ wireName: "payload", key: "payload" }],
                    singleKey: "payload",
                    
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_body_shape.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const DocumentSchema = z.object({
        
            title: z.coerce.string()
        
    });

    
    export const UploadResultSchema = z.object({
        
            media_type: z.coerce.string(),
        
            size: z.coerce.number().int().nonnegative()
        
    });
