xidlc/tests/snapshots/codegen_snapshot__ts-http__http_catch_all.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_catch_all.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_catch_all";

import type * as ifaceTypes from "./http_catch_all.iface";
import * as ifaceSchemas from "./http_catch_all.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class HttpCatchAllServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async read_file(rel_path: string): Promise<string> {
                const parsed = ifaceSchemas.HttpCatchAllServiceReadFileRequestSchema.parse({ "rel_path": rel_path });
                let xidlPath = "/files/{*path}";
                xidlPath = xidlPath.replace("{" + "*path" + "}", encodePathCatchAll(rel_path));
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
            async read_asset(key: string, version: string): Promise<string> {
                const parsed = ifaceSchemas.HttpCatchAllServiceReadAssetRequestSchema.parse({ "key": key, "version": version });
                let xidlPath = "/assets/{*key}";
                xidlPath = xidlPath.replace("{" + "*key" + "}", encodePathCatchAll(key));
                const query = new URLSearchParams();
                appendParam(query, "v", version, false, false);
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
    
}
===============
http_catch_all.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



export {};
===============
http_catch_all.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpCatchAllServiceReadFileRequest {
        rel_path: string;
        }

    

export interface HttpCatchAllServiceReadAssetRequest {
        key: string;
            version: string;
        }

export {};
===============
http_catch_all.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpCatchAllServiceReadFileRequestSchema = z.object({
        rel_path: z.coerce.string(),
    });
export type HttpCatchAllServiceReadFileRequest = z.infer<typeof HttpCatchAllServiceReadFileRequestSchema>;

    
export const HttpCatchAllServiceReadAssetRequestSchema = z.object({
        key: z.coerce.string(),
        version: z.coerce.string(),
    });
export type HttpCatchAllServiceReadAssetRequest = z.infer<typeof HttpCatchAllServiceReadAssetRequestSchema>;
===============
http_catch_all.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_catch_all";

import type * as ifaceTypes from "./http_catch_all.iface";
import * as ifaceSchemas from "./http_catch_all.iface.zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpCatchAllService {
    
        read_file(rel_path: string): Awaitable<string>;
    
        read_asset(key: string, version: string): Awaitable<string>;
    
}

export const HttpCatchAllServiceOperations = {
    
        read_file: defineOperation<HttpCatchAllService, "read_file">({
            handler: "read_file",
            method: "GET",
            path: "/files/{*path}",
            paths: ["/files/{*path}"],
            request: {
                kind: "object",
                args: ["rel_path"],
                schema: ifaceSchemas.HttpCatchAllServiceReadFileRequestSchema,
                path: [{ parameter: "path", wireName: "path", key: "rel_path", multi: false, catchAll: true }],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        read_asset: defineOperation<HttpCatchAllService, "read_asset">({
            handler: "read_asset",
            method: "GET",
            path: "/assets/{*key}",
            paths: ["/assets/{*key}"],
            request: {
                kind: "object",
                args: ["key", "version"],
                schema: ifaceSchemas.HttpCatchAllServiceReadAssetRequestSchema,
                path: [{ parameter: "key", wireName: "key", key: "key", multi: false, catchAll: true }],
                query: [{ wireName: "v", key: "version", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_catch_all.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";
